--- a/app/year.component.html
+++ b/app/year.component.html
@@ -1,4 +1,4 @@
-<h2>jaar {{year.order}}</h2>
+<h2>Jaar {{year.order}}</h2>
 <div class="foursplit"><div *ngFor="let number of [1,2,3,4]">{{number}}</div></div>
 <ul>
   <li *ngFor="let courseEl of year.courses">
