--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body{
   font-family: helvetica, arial, sans-serif
 }
+career{
+  width: 100%;
+  position: relative;
+  display: block;
+}
 career ul{
   list-style: none;
   padding: 0;
@@ -12,10 +17,25 @@ career>ul{
 }
 career>ul>li{
   flex-grow: 1;
-  border-right: 1px solid lightgrey
+  position: relative;
 }
-career>ul>li:first-child{
-  border-left: 1px solid lightgrey
+career>ul>li::after,
+career>ul>li:first-child::before{
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 1px;
+  height: 100%;
+  background-image: linear-gradient(to bottom, lightgrey 80%, rgba(255, 255, 255, 0) 70%);
+  background-position: right;
+  background-size: 1px 20px;
+  background-repeat: repeat-y;
+}
+career>ul>li:first-child::before{
+  left: 0;
+  right: auto;
 }
 year>h2{
   padding: 10px;
@@ -83,11 +103,13 @@ course span {
   	overflow: hidden;
 	white-space: nowrap;
 }
+button.fa {
+  background: none;
+  border: none;
+}
 course button.fa
 {
   position: absolute;
-  background: none;
-  border: none;
   padding: 2px 5px 0;
   font-size: 15px;
   left: 0px;
@@ -111,4 +133,21 @@ career>ul>li:first-child course button.fa:first-child{
 }
 career>ul>li:last-child course button.fa~button{
   display: none !important;
+}
+button{
+  cursor: pointer;
+}
+.tools{
+  position: absolute;
+  display: block;
+  top:0;
+  left:95%;
+  font-size: 30px;}
+.tools>button.fa {
+color: MediumPurple;
+}
+.tools>button.fa.disabled {
+color: lavender;
+
+  cursor: default;
 }
