--- a/app/year.component.html
+++ b/app/year.component.html
@@ -8,6 +8,6 @@
   </li>
 </ul>
 <div>
-  <div class="foursplit"><div *ngFor="let number of [1,2,3,4]" [textContent]="getTotalPointsOfP(number)"></div></div>
-  <div [textContent]="getTotalPoints()" > <i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
+  <div class="foursplit"><div *ngFor="let number of [1,2,3,4]" [textContent]="getTotalPointsOfP(number)">0</div></div>
+  <div [textContent]="getTotalPoints()" >0</div>
 </div>
