--- a/app/studycareer.component.html
+++ b/app/studycareer.component.html
@@ -1,6 +1,6 @@
 
 
-<ul class="program" [class.validate]="validating ||validatinglock">
+<ul class="program">
   <li *ngFor="let yearElement of program">
     <year [year]="yearElement" [careerComponent]="me" [distanceFromBottom]="distanceFromBottom()" (moveBackEvent)="moveCourseBack($event.index, $event.year)" (moveForwardEvent)="moveCourseForward($event.index, $event.year)"></year>
   </li>
@@ -8,7 +8,6 @@
 <div class="tools" #tools [style.top.px]="verticalscroll"  (window:resize)="updateVerticalScroll()" (document:scroll)="updateVerticalScroll()">
   <button class="fa fa-plus-square-o"  (click)="addYear()"></button>
   <button class="fa fa-trash-o" (click)="deleteYear()" [class.disabled]="program&&program.length<=1"></button>
-  <button class="fa fa-check" [class.fa-check-square]="validatinglock" [class.valid]="isValid()"
-  (mouseenter)="validating=true" (mouseleave)="validating=false" (click)="validatinglock = !validatinglock"></button>
+  <button class="fa fa-check"  [class.valid]="isValid()"></button>
 
 </div>
