--- a/app/course.component.html
+++ b/app/course.component.html
@@ -1,8 +1,8 @@
 <i [ngStyle]="{'flex-grow':(course.start-1)}" ></i>
 <div [ngStyle]="{'flex-grow':(course.duration)}" [class.invalid]="!areRequisitesMet()">
-  <button class="fa fa-chevron-left" (click)="moveBack()"></button>
+  <button class="fa fa-chevron-left" (click)="moveBack()" *ngIf="!isFinalYear()"></button>
   <a [href]="course.url" target="_blank">{{course.name}}</a>
 
-  <button class="fa fa-chevron-right" (click)="moveForward()"></button>
+  <button class="fa fa-chevron-right" (click)="moveForward()" *ngIf="!isFinalYear()"> </button>
 </div>
 <i [ngStyle]="{'flex-grow':5-course.start-course.duration}"></i>
