--- a/app/course.component.html
+++ b/app/course.component.html
@@ -1,7 +1,9 @@
 <i [ngStyle]="{'flex-grow':(course.start-1)}" ></i>
-<div [ngStyle]="{'flex-grow':(course.duration)}" [class.invalid]="!areRequisitesMet()" [class.lastyear]="isFinalYear()">
+<div [ngStyle]="{'flex-grow':(course.duration)}" [class.invalid]="!areRequisitesMet() " [class.lastyear]="isFinalYear()"
+  [class.reqgood]="isGood()" [class.reqwrong]="isWrong()"
+  (mouseenter)="mouseEnter()"   (mouseleave)="mouseLeave()">
   <button class="fa fa-chevron-left" (click)="moveBack()" *ngIf="!isFinalYear()"></button>
-  <a [href]="course.url" target="_blank">{{course.name}}</a>
+  <a [href]="course.url" target="_blank" >{{course.name}}</a>
 
   <button class="fa fa-chevron-right" (click)="moveForward()" *ngIf="!isFinalYear()"> </button>
 </div>
