--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ course>*{
 }
 course>div{
   background-color: lavender;
-  padding: 5px 0;
+  padding: 5px 2px;
   box-sizing: border-box;
   text-align: center;
   border-radius: 6px;
@@ -239,8 +239,19 @@ course:hover>div.invalid *{
 course>div.invalid a:hover{
   color: black  ;
 }
+
+course>div.reqwrong {
+  border: 2px solid Coral ;
+
+  padding: 3px 0px;
+}
+course>div.reqgood {
+  border: 2px solid ForestGreen  ;
+
+  padding: 3px 0px;
+}
 course>div.lastyear{
     border-bottom: 1px solid MediumPurple     ;
   box-sizing: border-box;
-  padding: 5px 0 3px;
+  padding: 5px 2px 3px;
 }
