--- a/app/course.component.html
+++ b/app/course.component.html
@@ -1,10 +1,10 @@
 <i [ngStyle]="{'flex-grow':(course.start-1)}" ></i>
-<div [ngStyle]="{'flex-grow':(course.duration)}" [class.invalid]="!areRequisitesMet() " [class.lastyear]="isFinalYear()"
-  [class.reqgood]="isGood()" [class.reqwrong]="isWrong()"
-  (mouseenter)="mouseEnter()"   (mouseleave)="mouseLeave()">
-  <button class="fa fa-chevron-left" (click)="moveBack()" *ngIf="!isFinalYear()"></button>
+<div [ngStyle]="{'flex-grow':(course.duration)}" [class.invalid]="!areRequisitesMet() " [class.lastyear]="course.graduationyear"
+  [class.reqgood]="isGood()" [class.reqwrong]="isWrong()">
+  <button class="fa fa-chevron-left" (click)="moveBack()" *ngIf="!course.graduationyear"></button>
   <a [href]="course.url" target="_blank" >{{course.name}}</a>
 
-  <button class="fa fa-chevron-right" (click)="moveForward()" *ngIf="!isFinalYear()"> </button>
+  <button class="fa fa-chevron-right" (click)="moveForward()" *ngIf="!course.graduationyear"> </button>
+  <div>{{course.studypoints}} SP</div>
 </div>
 <i [ngStyle]="{'flex-grow':5-course.start-course.duration}"></i>
