--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<h1>Persoonlijk Deeltijds Traject planner</h1> -->
 <career [program]="program"  (openLoadDialogEvent)="openLoadDialog()" ></career>
 <div #overlayComp class="overlay" *ngIf="overlay" (click)="closeOverlay($event, overlayComp)">
-  <dialog *ngIf="loadDialog" class="loaddialog" (loadMdtEvent)="setProgram($event)" (loadJsonEvent)="setUrl($event)"></dialog>
+  <dialog *ngIf="loadDialog" class="loaddialog" (loadMdtEvent)="setUrl($event)" (loadJsonEvent)="setProgram($event)"></dialog>
 </div>
