--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ hr{
     font-size: 0.9em;
 }
 
-.tools>button.fa-calendar-o,
+.tools>button.fa-folder-open-o,
 .tools>button.fa-check
 {
     font-size: 0.8em;
