--- a/app/studycareer.component.html
+++ b/app/studycareer.component.html
@@ -4,7 +4,7 @@
   </li>
 </ul>
 <div class="tools" #tools [style.top.px]="verticalscroll"  (window:resize)="updateVerticalScroll()" (document:scroll)="updateVerticalScroll()">
-  <button class="fa fa-folder-open-o" (click)="openLoadDialog()" title="Open studietraject"></button>
+  <button class="fa fa-folder-open-o" (click)="openLoadDialog()" title="Laad studietraject"></button>
   <button class="fa fa-floppy-o" (click)="saveFile()" title="Sla studietraject op"></button>
   <hr>
   <button class="fa fa-plus-square-o"  (click)="addYear()" title="Voeg een nieuw jaar toe"></button>
