--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ career>*{
 }
 
 career>ul{
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   margin: auto;
 }
@@ -28,6 +31,7 @@ career>ul{
   font-size: 30px;
   width: 35px;
   position: absolute;
+  -webkit-transition: top 0.1s;
   transition: top 0.1s;
 }
 hr{
@@ -77,7 +81,10 @@ career ul{
   padding: 0;
 }
 career>ul>li{
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   position: relative;
   min-width: 300px;
 }
@@ -90,6 +97,7 @@ career>ul>li:first-child::before{
   top: 0;
   width: 1px;
   height: 100%;
+  background-image: -webkit-linear-gradient(top, lightgrey 80%, rgba(255, 255, 255, 0) 70%);
   background-image: linear-gradient(to bottom, lightgrey 80%, rgba(255, 255, 255, 0) 70%);
   background-position: right;
   background-size: 1px 20px;
@@ -123,6 +131,7 @@ year::after{
 }
 year>div:last-child {
   margin-top: 15px;
+  -webkit-transition: bottom 0.05s;
   transition: bottom 0.05s;
   left: 0;
   right: 0;
@@ -165,11 +174,16 @@ course{
 
     padding: 5px 0;
   width: 95%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   margin: 0 auto;
 }
 course>*{
-  flex-basis: 0;
+  -webkit-flex-basis: 0;
+      -ms-flex-preferred-size: 0;
+          flex-basis: 0;
   width: 0;
 }
 course>div{
@@ -321,7 +335,8 @@ course>div.lastyear{
   font-size: 0.5em;
   display: inline;
   position: absolute;
-  transform: translate(5px,12px);
+  -webkit-transform: translate(5px,12px);
+          transform: translate(5px,12px);
 }
 .overlay {
   position: fixed;
@@ -336,7 +351,8 @@ course>div.lastyear{
   position: absolute;
   left:50%;
   top: 50%;
-  transform:translate(-50%,-50%);
+  -webkit-transform:translate(-50%,-50%);
+          transform:translate(-50%,-50%);
   display:block;
   z-index: 16;
   margin: 0;
@@ -412,7 +428,8 @@ course>div.lastyear{
   font-family: Arial;
   margin-top: 60px;
   font-size: 10px;
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
   letter-spacing: 0.3em;
   font-weight: bolder;
 }
