--- a/app/year.component.html
+++ b/app/year.component.html
@@ -8,7 +8,7 @@
      (moveBackEvent)="moveCourseBack($event)" (moveForwardEvent)="moveCourseForward($event)"></course>
   </li>
 </ul>
-<div [style.bottom.px]="distanceFromBottom">
+<div [style.bottom.px]="distanceFromBottom" [class.hidden]="careerComponent.scrolling">
   <div class="foursplit"><div *ngFor="let number of [1,2,3,4]" [textContent]="getTotalPointsOfP(number)">0</div></div>
   <div [textContent]="getTotalPoints()" [class.exceedmaxsp]="getTotalPoints()>72" >0</div>
 </div>
