--- a/app/course.component.html
+++ b/app/course.component.html
@@ -6,5 +6,9 @@
 
   <button class="fa fa-chevron-right" (click)="moveForward()" *ngIf="!course.graduationyear"> </button>
   <div class="studypoints">{{course.studypoints}} <sup>SP</sup></div>
+  <div class="courseoptions" [class.shown]="showOptions">
+    <button class="icon-pipe"></button>
+      <button class="fa fa-check-square"></button>
+  </div>
 </div>
 <i [ngStyle]="{'flex-grow':5-course.start-course.duration}"></i>
