--- a/app/course.component.html
+++ b/app/course.component.html
@@ -1,13 +1,13 @@
 <i [ngStyle]="{'flex-grow':(course.start-1)}" ></i>
 <div [ngStyle]="{'flex-grow':(course.duration)}" [class.invalid]="!areRequisitesMet() " [class.lastyear]="course.graduationyear"
   [class.reqgood]="isGood()" [class.reqwrong]="isWrong()" [class.nopass]="!course.pass" [class.dispensation]="course.dispensation">
-  <button class="fa fa-chevron-left" (click)="moveBack()" *ngIf="!course.graduationyear"></button>
+  <button class="fa fa-chevron-left" (click)="moveBack()" *ngIf="canGoBack()"></button>
   <a [href]="course.url" target="_blank" >{{course.name}}</a>
 
-  <button class="fa fa-chevron-right" (click)="moveForward()" *ngIf="!course.graduationyear"> </button>
+  <button class="fa fa-chevron-right" (click)="moveForward()" *ngIf="canGoForward()"> </button>
   <div class="studypoints">{{course.studypoints}} <sup>SP</sup></div>
   <div class="courseoptions" [class.shown]="showOptions">
-    <button [class.selected]="!course.pass" title="gebuist" (click)="buisClick()" >Buis</button><!--
+    <button [class.selected]="!course.pass" title="gebuist" (click)="buisClick()" *ngIf="!course.graduationyear">Buis</button><!--
  --><button [class.selected]="course.dispensation" title="vrijstelling" (click)="vrijstellingClick()">Vrijstelling</button>
   </div>
 </div>
