--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ career>ul{
   font-size: 30px;
   width: 35px;
   position: absolute;
-  transition: opacity 0.2s;
+  transition: opacity 0.4s;
 }
 .hidden {
   opacity: 0;
@@ -279,7 +279,7 @@ course:hover :not(.courseoptions)>button.fa
 {
   display: block ;
 }
-course :not(.courseoptions)>button.fa~button
+course :not(.courseoptions)>button.fa.fa-chevron-right
 {
   right: 0px;
   left:auto;
