--- a/app/studycareer.component.html
+++ b/app/studycareer.component.html
@@ -5,7 +5,7 @@
 </ul>
 <div class="tools" #tools [style.top.px]="verticalscroll" [class.hidden]="scrolling" (window:resize)="updateVerticalScroll(true)" (document:scroll)="updateVerticalScroll(true)">
   <button class="fa fa-folder-open-o" (click)="openLoadDialog()" title="Laad studietraject"></button>
-  <button class="fa fa-floppy-o" (click)="saveFile()" title="Sla studietraject op"></button>
+  <button class="fa fa-floppy-o" (click)="saveFile()" [class.disabled]="mobile.mobileAndTabletcheck()" title="Sla studietraject op"></button>
   <hr>
   <button class="fa fa-plus-square-o"  (click)="addYear()" title="Voeg een nieuw jaar toe"></button>
   <button class="fa fa-trash-o" (click)="deleteYear()"  [class.disabled]="program&&program.length<=1" title="Verwijder het laatste jaar"></button>
